--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI = mongodb+srv://yanikipallipallavipallavi:BusitronC@cluster0.oofyf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI = mongodb+srv://vasudev:vasu%401234@cluster0.q0spo.mongodb.net/masonry?retryWrites=true&w=majority&appName=Cluster0
 
 
 JWT_SECRET=your_jwt_secret
